# Nautilus

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  index.html  notes_about_naming.txt  notes_for_documentation.txt
.github/workflows/: docs.yml
.gitlab/: build_and_test.cmake  build_and_test.sh  build_docs.sh  check_format.sh  common.yml  kessel.sh  mr.sh
.kessel/workflows/: cdash.py  cmake.py  docs.py  format.py
cmake/: FindClangFormat.cmake  config_summary.cmake  nautilus-config.cmake.in
doc/sphinx/: README.md  conf.py  index.html  index.rst
doc/sphinx/src/: build.rst  concepts.rst  entity_tag.rst  format_ic.rst  format_mcnp.rst  format_ndi.rst  format_standard.rst  link_pdf.rst  nuclei.rst  overview.rst  shared_components.rst  sphinx_howto.rst
examples/: CMakeLists.txt
main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/src/: build.doctree  concepts.doctree  entity_tag.doctree  format_ic.doctree  format_mcnp.doctree  format_ndi.doctree  format_standard.doctree  nuclei.doctree  overview.doctree  shared_components.doctree  versioning.doctree
main/_sources/: index.rst.txt
main/_sources/src/: build.rst.txt  entity_tag.rst.txt  format_ndi.rst.txt  format_standard.rst.txt
main/src/: build.html  concepts.html  entity_tag.html  format_ic.html  format_mcnp.html  format_ndi.html  format_standard.html  nuclei.html  overview.html  shared_components.html  versioning.html
nautilus/: CMakeLists.txt  SZA.hpp  dummy.hpp  dummy_kokkos.hpp  isotope.hpp  names.hpp  nuclide.hpp  tag.hpp  temporary.hpp  zaid_tools.hpp
nautilus/entity_tag/: CMakeLists.txt  bitsegment.hpp  entity_tag.hpp  format_ic.hpp  format_ic_chemsym.hpp  format_mcnp.hpp  format_ndi.hpp  format_standard.hpp  format_standard_name.hpp  identifiers.hpp  names.hpp  string_processing.hpp
nautilus/entity_tag/test/: bitsegment.cpp  bitsegment_kokkos.cpp  entity_tag.cpp  entity_tag_kokkos.cpp  format_ic.cpp  format_ic_chemsym.cpp  format_mcnp.cpp  format_ndi.cpp  format_standard.cpp  format_standard_name.cpp  names.cpp  names_kokkos.cpp  string_processing.cpp
nautilus/tag/: CMakeLists.txt  bitsegment.hpp  entity_tag.hpp  format_ic_chemsym.hpp  format_mcnp.hpp  format_ndi.hpp  format_standard_name.hpp  identifiers.hpp  names.hpp  pantag.hpp  string_processing.hpp
nautilus/tag/test/: bitsegment.cpp  bitsegment_kokkos.cpp  format_ic_chemsym.cpp  format_mcnp.cpp  format_ndi.cpp  format_standard_name.cpp  names_kokkos.cpp  pantag.cpp  pantag_kokkos.cpp
nautilus/test/: SZA.cpp  SZA_kokkos.cpp  dummy.cpp  dummy_kokkos.cpp  isotope.cpp  isotope_kokkos.cpp  names.cpp  names_kokkos.cpp  nuclide.cpp  nuclide_kokkos.cpp  zaid_tools.cpp
nautilus/util/: CMakeLists.txt  gpu_check.hpp  string_processing.hpp
nautilus/util/test/: string_processing.cpp
spack-repo/: packages  repo.yaml
spack-repo/v1/: repo.yaml
spack-repo/v2/spack_repo/nautilus/: repo.yaml
test/: CMakeLists.txt  dummy.cpp  test_general.cpp  test_main.cpp
v1.0.1.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html
v1.0.1.0/.doctrees/: environment.pickle  index.doctree
v1.0.1.0/.doctrees/src/: nuclei.doctree  overview.doctree  versioning.doctree
v1.0.1.0/_sources/src/: nuclei.rst.txt
v1.0.1.0/src/: nuclei.html  overview.html  versioning.html
v1.0.1.1/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.0.1.1/.doctrees/: environment.pickle  index.doctree
v1.0.1.1/.doctrees/src/: nuclei.doctree  overview.doctree  versioning.doctree
v1.0.1.1/_sources/: index.rst.txt
v1.0.1.1/src/: nuclei.html  overview.html  versioning.html
v1.0.1.2/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.0.1.2/.doctrees/: environment.pickle  index.doctree
v1.0.1.2/.doctrees/src/: nuclei.doctree  overview.doctree  versioning.doctree
v1.0.1.2/_sources/: index.rst.txt
v1.0.1.2/src/: nuclei.html  overview.html  versioning.html
v1.0.1.3/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.0.1.3/.doctrees/: environment.pickle  index.doctree
v1.0.1.3/.doctrees/src/: nuclei.doctree  overview.doctree  versioning.doctree
v1.0.1.3/_sources/: index.rst.txt
v1.0.1.3/_sources/src/: versioning.rst.txt
v1.0.1.3/src/: nuclei.html  overview.html  versioning.html
v1.0.1.4/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v1.0.1.4/.doctrees/: environment.pickle  index.doctree
v1.0.1.4/.doctrees/src/: nuclei.doctree  overview.doctree  versioning.doctree
v1.0.1.4/_sources/src/: nuclei.rst.txt  overview.rst.txt  versioning.rst.txt
v1.0.1.4/src/: nuclei.html  overview.html  versioning.html
